--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id "com.github.spotbugs" version "6.1.7"
     id 'com.gradleup.shadow' version '8.3.6'
     id 'java'
+    id 'com.diffplug.spotless' version '6.2.0'
 }
 
 group = "com.storytimeproductions.stweaks"
@@ -126,6 +127,23 @@ shadowJar {
 jar.enabled = false
 assemble.dependsOn(shadowJar)
 
+spotless {
+    java {
+        googleJavaFormat() // Use Google Java Format style
+        target 'src/**/*.java'
+    }
+}
+
+// Create a task for code formatting
+task formatCode {
+    dependsOn 'spotlessApply'
+}
+
+task checkFormat {
+    dependsOn 'spotlessCheck'
+}
+
+// Disable jar and use shadowJar as the default task for assembling the jar
 tasks.register('printProjectName') {
     doLast {
         println rootProject.name
