--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,8 @@ repositories {
         url 'https://repo.codemc.org/repository/maven-public/'
     }
 
+    maven { url "https://repo.dmulloy2.net/repository/public/" }
+
     mavenCentral()
 }
 
@@ -83,6 +85,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.12.1'
     implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
     compileOnly 'net.skinsrestorer:skinsrestorer-api:15.6.2'
+    compileOnly 'com.comphenix.protocol:ProtocolLib:5.1.0'
 }
 
 test {
