--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,6 +14,10 @@ commands:
     description: Boosts multiplier for community participation (WIP)
     usage: "/stboost"
     aliases: boost
+  stlobby:
+    description: Teleport to the lobby
+    usage: /stlobby
+    aliases: lobby
 
 permissions:
   stweaks.status:
@@ -22,9 +26,13 @@ permissions:
   stweaks.boost:
     description: Allows use of /stboost
     default: op
+  stweaks.lobby:
+    description: Allows access to /stlobby
+    default: true
   stweaks.*:
     description: Grants all Stweaks permissions
     default: false
     children:
       stweaks.status: true
       stweaks.boost: true
+      stweaks.lobby: true
