feat: add quest management system with GUI integration
- Introduced a new Quest class to represent quests with attributes like ID, name, lore, item requirements, rewards, and required players.
- Implemented QuestsManager to handle quest lifecycle, including loading from YAML and tracking completed quests in the database.
- Added QuestMenuCommand to open a graphical quest menu for players, displaying available quests and completion statistics.
- Updated plugin.yml to include new command /stquests and associated permissions.
- Created database schema for completed quests.
- Added JSON and model files for quest menu items.
- Updated BiomeNotifier to recognize the new quest menu.

--- a/bin/main/plugin.yml
+++ b/bin/main/plugin.yml
@@ -25,6 +25,10 @@ commands:
   biometracker:
     description: Opens the biome tracker GUI
     usage: /biometracker
+  stquests:
+    description: Opens the quests GUI
+    usage: /stquests
+    aliases: quests
 
 permissions:
   stweaks.status:
@@ -41,6 +45,9 @@ permissions:
     default: true
   stweaks.biometracker:
     description: Allows access to /biometracker
+    default: true
+  stweaks.quests:
+    description: Allows access to /stquests
     default: true
   stweaks.*:
     description: Grants all Stweaks permissions
