Add cosmetics feature with management and configuration
- Implemented CosmeticsManager to load and manage cosmetic items from cosmetics.yml.
- Created Cosmetic class to represent individual cosmetic items with properties like ID, item model, display name, lore, and crafting recipe.
- Added cosmetics.yml configuration file with multiple cosmetic entries and their respective crafting recipes.
- Updated PetsListener to include a timer for pet actions, ensuring actions are only taken when the player's timer allows.
- Modified plugin.yml to include commands and permissions for the new cosmetics feature.
- Removed outdated quest menu item models and textures to clean up resources.

--- a/bin/main/plugin.yml
+++ b/bin/main/plugin.yml
@@ -33,6 +33,10 @@ commands:
     description: Opens the pets GUI
     usage: /stpets
     aliases: pets
+  stcosmetics:
+    description: Opens the cosmetics GUI
+    usage: /stcosmetics
+    aliases: cosmetics
 
 permissions:
   stweaks.stpets:
@@ -56,6 +60,9 @@ permissions:
   stweaks.quests:
     description: Allows access to /stquests
     default: true
+  stweaks.cosmetics:
+    description: Allows access to /stcosmetics
+    default: true
   stweaks.*:
     description: Grants all Stweaks permissions
     default: false
@@ -67,3 +74,4 @@ permissions:
       stweaks.biometracker: true
       stweaks.quests: true
       stweaks.pets: true
+      stweaks.cosmetics: true
