feat: add StCasinoCommand to teleport players to the casino world and update plugin.yml

--- a/bin/main/plugin.yml
+++ b/bin/main/plugin.yml
@@ -37,6 +37,10 @@ commands:
     description: Opens the cosmetics GUI
     usage: /stcosmetics
     aliases: cosmetics
+  stcasino:
+    description: Opens the casino GUI
+    usage: /stcasino
+    aliases: casino
 
 permissions:
   stweaks.stpets:
