Add Hunt game mechanics and utility features
- Introduced HuntTeam enum to represent player teams in Hunt games.
- Implemented HuntUtilityListener to manage hunter utility item abilities with cooldowns.
- Created HunterClass enum to define different hunter classes with unique weapons and abilities.
- Added HunterDisguiseType enum for various disguise types and their passive abilities.
- Developed EntityDisguiseManager to handle disguising slimes as players or items in the lobby.
- Configured hunt.yml for game settings, including world, spawn locations, utility cooldowns, and map configurations.
- Updated plugin.yml to include new commands and permissions for managing the Hunt game.

--- a/bin/main/plugin.yml
+++ b/bin/main/plugin.yml
@@ -41,6 +41,13 @@ commands:
     description: Opens the casino GUI
     usage: /stcasino
     aliases: casino
+  stdisguise:
+    description: Manage entity disguises in the lobby
+    usage: /disguise [apply|remove|reload]
+  hunt:
+    description: Opens the Hunt game lobby
+    usage: /hunt [join|leave|status]
+    aliases: [ huntlobby, huntgame ]
 
 permissions:
   stweaks.stpets:
@@ -67,6 +74,9 @@ permissions:
   stweaks.cosmetics:
     description: Allows access to /stcosmetics
     default: true
+  stweaks.disguise:
+    description: Allows access to /stdisguise command
+    default: op
   stweaks.*:
     description: Grants all Stweaks permissions
     default: false
@@ -79,3 +89,11 @@ permissions:
       stweaks.quests: true
       stweaks.pets: true
       stweaks.cosmetics: true
+      stweaks.disguise: true
+
+depend:
+- LibsDisguises
+- DecentHolograms
+
+softdepend:
+- EntitySize
